tests/ui/de-container-attr-try-from-and-from.rs
use deserr::Deserr;

#[derive(Deserr)]
#[deserr(try_from(String) = String::parse -> usize)]
#[deserr(from(String) = usize::FromStr)]
struct UnitStruct {
    hello: usize,
}

fn main() {}
